# nsc-vsvz-classification

./: .gitignore  GSE266687_summary.md  PROJECT_NARRATIVE.md  README.md  README_consistency.md  aws.md  compare_tap_fate_methods.py  data_io.py  hvg_10.csv  marker_dotplot.py  markers.py  next_steps.md  nhvg_10.csv  normalized_cell_counts_top_10.csv  panglao_panel.csv  panglao_panel.md  preprocess.py  process_all_remaining.sh  process_sample.sh  pyproject.toml  rna_velocity_pipeline.py  rna_velocity_trajectory.md  run_consistency_checks.py  run_kb_count.sh  run_pipeline.py  spliced_unspliced_explainer.md  tap_analysis.py  tap_fate_comparison.md  train_ol_classifier.py  validate_barcodes.py  validate_cellrank.py  velocity_build.py
models/: ol_classifier.json
outputs/: Cell_marker_Mouse.xlsx  cellrank_fate_probabilities.csv  classifier_summary.csv  failed_max_pct_mt_cells_data_top10.csv  failed_max_pct_mt_cells_metadata_top10.csv  failed_min_genes_cells_data_top10.csv  failed_min_genes_cells_metadata_top10.csv  normalized_cell_counts_top_10.csv  ol_commitment.csv  out_of_sample_comparison.csv  out_of_sample_comparison_test1.xlsx  out_of_sample_tap_comparison_test2.csv  out_of_sample_tap_comparison_test2.xlsx  raw_barcodes_genes_top100.csv  raw_cell_counts_top_10.csv  tap_candidate_trigger_genes.csv  tap_committed_by_condition.csv  tap_committed_fisher.csv  tap_fate_comparison.csv  tap_fate_method_summary.csv  tap_fate_per_condition.csv  tap_high_vs_low_commit_DE.csv  test1_accuracy_by_condition.csv  test2_agreement_view.csv  test2_ol_rate_comparison.csv  trigger_genes.csv  (+2 more)
(+25 files in other folders)
