[project]
name = "nsc-vsvz-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.13",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.11.0",
    "scanpy>=1.12.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scrublet>=0.2.3",
    "shap>=0.51.0",
    "umap-learn>=0.5.12",
    "xgboost>=3.2.0",
]
