[project]
name = "nsc-vsvz-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "anndata>=0.12.13",
    "kb-python>=0.28.2",
    "black>=26.5.1",
    "igraph>=1.0.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.11.0",
    "ruff>=0.15.15",
    "scanpy>=1.12.1",
    "scikit-learn>=1.8.0",
    "scrublet>=0.2.3",
    "scvelo>=0.3.4",
    "shap>=0.51.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.12",
    "xgboost>=3.2.0",
    # cellrank>=2.1 pulls pygam>=0.10, which constrains scipy<1.17. Nothing
    # in our pipeline actually needs scipy>=1.17, so we cap to <1.17 to
    # let modern cellrank in (gets the upstream numpy-2 fix and drops the
    # local np.testing monkey-patch).
    "scipy>=1.13,<1.17",
    "cellrank>=2.3.1",
]


